@@ -3,6 +3,11 @@
   * minor enhancements
     * supports privileges
 
+    	events = WMI::Win32_NTLogEvent.find(
+    	  :all, :privileges => [WMI::Security],
+        :conditions => {:logfile => 'Security', :eventcode => '517'} )
+
+    * added error handling for query errors and class name typos
 
 == 0.2.1 / 2007-07-19
 
